# tREngine

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
source/: CMakeLists.txt  definitions.h  drawFrame.c
source/assets/: asset.h
source/assets/models/: actualModel.h
source/assets/models/animate/: animate.c
source/assets/models/loader/: gltfLoader.c  isClockWise.c  modelLoader.c  modelLoader.h  objLoaderl.c  triangulation.c  ttfLoader.c
source/assets/textures/: texture.h  textureLoader.c
source/assets/textures/functions/: textureFunctions.h  textureImage.c  textureImageView.c  textureSampler.c  textureSet.c
source/basicThings/: MY_ASSERT.h  myMalloc.h
source/bufferDefinitions/: Vertex.h  cameraBufferObject.h  createInstance.c  instanceBuffer.h  pushConstantsBuffer.h
source/buffers/: buffer.h  buffers.c  vertexBuffer.c
source/buffers/bufferOperations/: bufferOperations.c  bufferOperations.h
source/descriptors/: cameraSet.c  descriptor.h  descriptorSet.c  descriptorSetLayout.c  objectSet.c
source/engineCore/: engineCore.c  engineCore.h
source/engineCore/GraphicsSetup/: graphicsSetup.c  graphicsSetup.h
source/engineCore/GraphicsSetup/functions/: colorResources.c  commandBuffer.c  commandPool.c  depthResource.c  graphicsFunctions.h  imageViews.c  instance.c  logicalDevice.c  physicalDevice.c  surface.c  swapChain.c  syncObjects.c
source/engineCore/GraphicsSetup/queueFamilyIndices/: queueFamilyIndices.c  queueFamilyIndices.h
source/engineCore/deltaTimeManager/: deltaTime.c  deltaTime.h
source/engineCore/resourceManager/: resourceManager.c  resourceManager.h
source/engineCore/soundManager/: soundManager.c  soundManager.h
source/engineCore/windowManager/: window.c  windowManager.c  windowManager.h
source/entities/: createEntity.c  entity.h  entityBuilder.h
source/entities/model/: createModel.c  modelBuilder.h
source/entities/string/: createString.c  stringBuilder.h
source/pipeline/: graphicsPipelineObj.c  graphicsPipelineObj.h
source/pipeline/functions/: graphicsPipeline.c  pipelineFunctions.h  pipelineLayout.c
source/renderPass/core/: renderPassCore.c  renderPassCore.h
(+11 files in other folders)
